# HexagonGame

./: CMakeLists.txt  LandVsSea.sln  README.md  vcpkg-configuration.json  vcpkg.json
LandVsSea/: Game.cpp  Game.h  Hexagon.cpp  Hexagon.h  HexagonManager.cpp  HexagonManager.h  LandVsSea.vcxproj  LandVsSea.vcxproj.filters  pch.h
Prog1Engine/: Core.cpp  Core.h  Prog1Engine.targets  Prog1Engine.vcxproj  Prog1Engine.vcxproj.filters  base.h  main.cpp  pch.h  structs.cpp  structs.h  utils.cpp  utils.h
src/: CameraSystem.cpp  CameraSystem.h  Game.cpp  Game.h  Hexagon.cpp  Hexagon.h  HexagonManager.cpp  HexagonManager.h  Layout.cpp  Layout.h  Orientation.cpp  Piece.cpp  Piece.h  UISystem.cpp  UISystem.h
src/GameEngine/: AbstractGame.cpp  AbstractGame.h  GameEngine.cpp  GameEngine.h  main.cpp
src/Hexagons/: Cube.cpp  Cube.h  Hexagon.cpp  Hexagon.h  Layout.cpp  Layout.h  Orientation.cpp  Orientation.h
src/Utils/: Matrix.cpp  Matrix.h  Mouse.h  Rect.cpp  Rect.h  Texture.cpp  Texture.h  Vector2d.cpp  Vector2d.h
